--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ libloading = "0.5.0"
 
 [dev-dependencies]
 png = "0.14.0"
+image = "0.25.2"
+bevy = "0.12.1"
+
+
+[build-dependencies]
+bindgen = "0.70.0"
